# piw-pew

./: .env  .gitignore  Cargo.toml  README.md  package.json  settings.json
.github/workflows/: rust.yml
assets/: PIK_KEVLAR  WPN_AKA  WPN_DEAN
client/: Cargo.toml
client/src/: game.rs  main.rs
client/src/components/: controller.rs  entity.rs  game_object.rs  health.rs  mod.rs
client/src/configs/: mod.rs
client/src/entities/: player.rs
client/src/game/: graphics.rs  mod.rs
client/src/lib/: mod.rs
maps/: default.map
scripts/: client.sh
server/: Cargo.toml  package.json  pnpm-lock.yaml
server/core/: Cargo.toml  tauri.conf.json
server/core/src/: main.rs  server.rs
server/maps/: default.map
server/src/: gui.rs  main.rs  server.rs
server/src/lib/: mod.rs
slib/: Cargo.toml
slib/src/: lib.rs
src/client/: game.rs  main.rs
src/client/configs/: mod.rs
src/client/core/: mod.rs
src/client/entities/: enemy.rs  mod.rs  player.rs  projectile.rs  tile.rs  weapon.rs
src/lib/: mod.rs
src/lib/configs/: mod.rs
src/lib/core/: loader.rs  mod.rs
src/lib/entities/: enemy.rs  player.rs  projectile.rs  tile.rs  weapon.rs
src/lib/network/: mod.rs
src/lib/utils/: mod.rs
src/server/: main.rs
