[package]
name = "piw-pew"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "./src/client/main.rs"

[[bin]]
name = "server"
path = "./src/server/main.rs"

[lib]
name = "lib"
path = "./src/lib/mod.rs"

[dependencies]
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
raylib = { version = "3.7" }
log = "0.4"
env_logger = "^0.11.2"
renet = "0.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.196"
rmp-serde = "1.1.2"
serde_json = "1.0"
strum_macros = "0.26.1"
strum = "0.26.1"
once_cell = "1.19.0"
rand = "0.8.5"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
