[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "piw-pew"
path = "./src/main.rs"

[lib]
name = "lib"
path = "./src/lib/mod.rs"

[dependencies]
slib = { path = "../slib" }
nalgebra = { workspace = true }
renet = { workspace = true }
log = { workspace = true, features = ["max_level_debug", "release_max_level_warn"]  }
env_logger = { workspace = true }
raylib = { version = "3.7" }
ncollide2d = "0.33.0"
strum_macros = "0.26.1"
strum = "0.26.1"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
