[package]
name = "server-core"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server-core"
path = "./src/main.rs"

[lib]
name = "lib"
path = "./src/lib/mod.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slib = { path = "../../slib" }
renet = { workspace = true }
log = { workspace = true, features = ["max_level_debug", "release_max_level_warn"]  }
env_logger = { workspace = true }
bincode = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
